fix z-index of year on mobile

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -178,6 +178,7 @@ img {
 	#year {
 		font-size: 100px;
 		line-height: 100px;
+		z-index: -10;
 	}
 	
 	#main {
